kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: bc0ec63a3b1f053fc95dd2f037958c84866773b8
    app.quarkus.io/build-timestamp: 2023-10-03 - 18:46:17 +0000
  labels:
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: quarkus-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: bc0ec63a3b1f053fc95dd2f037958c84866773b8
    app.quarkus.io/build-timestamp: 2023-10-03 - 18:46:17 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-app
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: bc0ec63a3b1f053fc95dd2f037958c84866773b8
        app.quarkus.io/build-timestamp: 2023-10-03 - 18:46:17 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: quarkus-app
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/etsauer/quarkus-app:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        name: quarkus-app
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
