dashboard-deploy.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pelorus-ui
  namespace: pelorus-api
  labels:
    app.kubernetes.io/managed-by: nodejs
    app.kubernetes.io/name: pelorus-ui
    app.kubernetes.io/version: dev
spec:
  to:
    kind: Service
    name: pelorus-ui
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: ''
  port:
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: nodejs
    app.kubernetes.io/name: pelorus-ui
    app.kubernetes.io/version: dev
  name: pelorus-ui
  namespace: pelorus-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: pelorus-ui
    app.kubernetes.io/version: dev
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: nodejs
    app.kubernetes.io/name: pelorus-ui
    app.kubernetes.io/version: dev
  name: pelorus-ui
  namespace: pelorus-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pelorus-ui
      app.kubernetes.io/version: dev
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: nodejs
        app.kubernetes.io/name: pelorus-ui
        app.kubernetes.io/version: dev
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: AUTH_TOKEN
          value: /var/run/secrets/kubernetes.io/serviceaccount/token
        - name: PELORUS_URL
          value: "https://prometheus-pelorus.pelorus.svc:9091/api/v1"
        image: quay.io/etsauer/pelorus-dashboard:dev
        imagePullPolicy: Always
        name: pelorus-ui
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
